[package]
name = "alloy-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "27a1e36", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc-client",
    "signer-wallet",
] }

eyre = "0.6.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
alloy-sol-macro = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
alloy-primitives = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
alloy-dyn-abi = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
syn-solidity = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }
alloy-core = { git = "https://github.com/alloy-rs/core", rev = "ff33969" }

[[bin]]
name = "missing_nonce"
path = "bin/missing_nonce.rs"

[[bin]]
name = "with_recommended_layers"
path = "bin/with_recommended_layers.rs"

[[bin]]
name = "reference"
path = "bin/reference.rs"
